[package]
name = "rust-crm-sync"
version = "0.1.0"
authors = ["dan"]

[dependencies]
reqwest = "0.8.4"
lazy_static = "0.2" 
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4"
time = "0.1"
postgres = { version = "0.15.1", features = ["with-chrono"] }
r2d2="0.7.3"
r2d2_postgres="0.13"
fallible-iterator = "0.1.3"
