[package]
name = "rust-crm-sync"
version = "0.1.1"
authors = ["dan"]

[dependencies]
reqwest = "0.9.5"
lazy_static = "1.2.0" 
serde_json = "1.0.33"
serde = "1.0.82"
serde_derive = "1.0.82"
chrono = "0.4"
time = "0.1"
postgres = { version = "0.15.2", features = ["with-chrono"] }
r2d2="0.7.3"
r2d2_postgres="0.13"
fallible-iterator="0.1.3"
hyper="0.12.19"
pretty_env_logger = "0.2.0"
futures = "0.1"
tokio = "0.1"
url="1.0"
crossbeam-channel="0.3"