[package]
name = "rust-crm-sync"
version = "0.1.1"
authors = ["dan"]
edition = "2018"

[dependencies]
reqwest = "0.9.5"
lazy_static = "1.2.0" 
serde_json = "1.0.33"
serde = "1.0.82"
serde_derive = "1.0.82"
serde-aux = "0.6.1"
chrono = "0.4"
time = { version = "0.2", default-features = true }
postgres = { version = "0.15.2", features = ["with-chrono"] }
r2d2="0.7.3"
r2d2_postgres="0.13"
fallible-iterator="0.1.3"
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.1"
futures-03 = {package="futures", version = "0.3"}
url="1.0"
crossbeam-channel="0.4"
sha1 = "0.6.0"
base64 = "0.10.1"
tokio-compat = { version = "0.1", features = ["rt-full"] }
tokio-01 = { package = "tokio", version = "0.1" }
tokio-02 = { package = "tokio", version = "0.2.4", features = ["full"] }
warp = "0.2"